login expired component added
Says to login when token is expired

--- a/src/styles/ParkingLot.css
+++ b/src/styles/ParkingLot.css
@@ -3,7 +3,9 @@
   max-width: 250px;
   max-height: 250px;
 }
-
+#wrapper {
+  background-color: #90a2bd !important;
+}
 #metrics {
   margin-left: 15%;
   padding: 20px;
