logout functionality added
minimal styling changes and typos fixed

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -5,6 +5,10 @@
 }
 #nav svg {
   font-size: 30px;
+  color: white;
+}
+#nav .navbar-brand {
+  color: white;
 }
 #nav button {
   border-radius: 0px;
