--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,21 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+#inprogressImage {
+  margin-left: 40%;
+  margin-top: 5%;
+}
 code {
   font-family: "Roboto", sans-serif !important;
 }
 p {
   margin: 0px !important;
+}
+@media only screen and (max-width: 768px) {
+  #inprogressImage {
+    width: 50%;
+    object-fit: contain;
+    margin-left: 30%;
+    margin-top: 50%;
+  }
 }
